<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://
    schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".fragments.CreatePostFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:orientation="vertical"
        android:background="@drawable/off_white_selector">

        <EditText
            android:id="@+id/add_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@color/offWhite"
            android:hint="@string/write_your_post"
            android:inputType="textCapSentences|textMultiLine"
            android:paddingTop="16dp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="invisible"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <View
            style="@style/Divider.Horizontal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <TextView
            android:id="@+id/Gallary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/photo_from_gallery"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="16dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/off_white_selector" />
        <View style="@style/Divider.Vertical"/>

        <TextView
            android:id="@+id/Camera"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/photo_by_camera"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="16dp"
            android:layout_marginStart="4dp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:background="@drawable/off_white_selector" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <TextView
            android:id="@+id/text_view_create_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:autoSizeTextType="uniform"
            android:textStyle="bold"
            android:padding="16dp"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/off_white_selector"/>

        <Button
            android:id="@+id/share_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_post"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/white"
            android:autoSizeTextType="uniform"
            android:background="@drawable/share_post_selector"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>

</ScrollView>