<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:focusableInTouchMode="true"
            android:descendantFocusability="beforeDescendants"
            android:padding="16dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_view_profile_picture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_account_circle"
                android:onClick="onClickProfilePicture"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/off_white_selector">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/off_white_selector">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/off_white_selector"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:background="@drawable/off_white_shape"
                android:padding="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:textColor="@color/black"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Spinner
                        android:id="@+id/spinner_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/days"/>
                    <Spinner
                        android:id="@+id/spinner_months"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/months"/>
                    <Spinner
                        android:id="@+id/spinner_years"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/years"/>
                </LinearLayout>
            </LinearLayout>
            <RadioGroup
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:background="@drawable/off_white_shape"
                android:padding="4dp">
                <RadioButton
                    android:id="@+id/radio_button_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>
                <RadioButton
                    android:id="@+id/radio_button_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
            </RadioGroup>
            <Button
                android:id="@+id/button_create_new_account"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/green_selector"
                android:text="@string/create_new_account"
                android:textColor="@color/white"
                android:onClick="onClickCreateNewAccount"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/yellow_shape"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_margin="12dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">
        <TextView
            android:id="@+id/text_view_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:gravity="center"/>
        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/off_white_selector"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:onClick="onClickOk"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/progress_shape"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>